--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MemoTest</string>
+    <string name="permission">권한 허가 되었음</string>
+    <string name="email">제목과 내용은 필수입니다.</string>
+    <string name="needCamera">카메라 권한 필요합니다.</string>
+    <string name="noCamera">카메라 앱이 없습니다.</string>
+
 </resources>
